# petya-green-multicore

./: CMakeLists.txt  CustomOptionDescription.cpp  CustomOptionDescription.h  License.txt  MainAppFrame.cpp  MainAppFrame.h  MainApplication.cpp  MainApplication.h  OptionPrinter.cpp  OptionPrinter.h  PetyaHarddiskDumpTiny.img  README.md  TDROff.reg  TDROn.reg  cpu_code.cpp  cpu_code.h  globals.h  gpu_code.cpp  gpu_code.cu  gpu_code.h  gpu_code_CPU_Test.cpp  keyCandidateDistributor.h  main.cpp  salsa20.cpp  wxImagePanel.cpp  wxImagePanel.h  xmlStore.h
